<resources>
    <string name="app_name">Trilateral</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="toggle_environment">Toggle Environment</string>
    <string name="update_watch">Update Watch</string>

    <string name="environment">Environment</string>
    <string name="zone">Zone</string>
    <string name="device">Device</string>
    <string name="position">Position</string>
    <string name="angle">Angle</string>
    <string name="nearby_thing">Nearby Thing</string>
    <string name="color">COLOR</string>
    <string name="brightness">BRIGHTNESS</string>

    <string name="time">00:00</string>
    <string name="am_pm">am</string>

    <string name="use_gps_title">Use GPS</string>
    <string name="use_beacons_title">Use Beacons</string>
    <string name="use_cmx_title">Use CMX</string>
    <string name="use_compass_title">Use Compass</string>
</resources>
