<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Flare Server"
        android:key="pref_flare_server">
        <EditTextPreference
            android:key="pref_flare_host"
            android:title="Server"
            android:summary=""
            android:dialogTitle="Flare Server"
            android:defaultValue="localhost" />
        <EditTextPreference
            android:key="pref_flare_port"
            android:title="Port"
            android:summary=""
            android:dialogTitle="Flare Server"
            android:defaultValue="1234" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_gps"
            android:title="@string/use_gps_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_beacons"
            android:title="@string/use_beacons_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_compass"
            android:title="@string/use_compass_title" />
    </PreferenceCategory>
</PreferenceScreen>