<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.cisco.flare.trilateral.MainActivity$ThingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Thing name"
        android:id="@+id/nearbyThingTextView2"
        android:layout_below="@+id/textView12"
        android:layout_gravity="center_horizontal"/>

    <TextView android:text="@string/nearby_thing" android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/nearbyThingDescription"
              android:layout_gravity="center_horizontal"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:text="&lt;"
            android:id="@+id/previousButton"
            />

        <TextView
            android:text="@string/color"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/colorLabel"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="100"
            android:gravity="center_vertical|center_horizontal"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:text="&gt;"
            android:id="@+id/nextButton"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

         <Button
            android:id="@+id/color_button_1"
            android:layout_width="@dimen/color_button_size"
            android:layout_height="@dimen/color_button_size"
            android:background="@drawable/color_button"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/color_button_2"
            android:layout_width="@dimen/color_button_size"
            android:layout_height="@dimen/color_button_size"
            android:background="@drawable/color_button"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/color_button_3"
            android:layout_width="@dimen/color_button_size"
            android:layout_height="@dimen/color_button_size"
            android:background="@drawable/color_button"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/color_button_4"
            android:layout_width="@dimen/color_button_size"
            android:layout_height="@dimen/color_button_size"
            android:background="@drawable/color_button"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/color_button_5"
            android:layout_width="@dimen/color_button_size"
            android:layout_height="@dimen/color_button_size"
            android:background="@drawable/color_button"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/color_button_6"
            android:layout_width="@dimen/color_button_size"
            android:layout_height="@dimen/color_button_size"
            android:background="@drawable/color_button"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:text="-"
            android:id="@+id/darkerButton"/>

        <TextView
            android:text="@string/brightness"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/brightnessLabel"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="100"
            android:gravity="center_vertical|center_horizontal"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:text="+"
            android:id="@+id/lighterButton"/>
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/brightnessBar"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:clickable="true"
        />

</LinearLayout>